--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "express-session": "1.17.1",
     "http-errors": "~1.6.3",
+    "i": "^0.3.6",
     "jade": "~1.11.0",
     "jsonwebtoken": "8.5.1",
     "mongoose": "5.10.9",
@@ -20,6 +21,7 @@
     "morgan": "~1.9.1",
     "multer": "1.4.2",
     "passport": "0.4.1",
+    "passport-facebook-token": "4.0.0",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
     "passport-local-mongoose": "6.0.1",
